# cpp-boilerplate

./: .editorconfig  CMakeLists.txt  Makefile  README.md
src/app/: CMakeLists.txt  main.cc
